--- a/allergen_demo/allergen_ABT_construction.ipynb
+++ b/allergen_demo/allergen_ABT_construction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -56,30 +56,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "ao_sequences = get_sequences_from_fasta(open('allergens.fasta'))\n",
-    "lengths = [len(seq) for seq in sequences]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "ao_df = pd.DataFrame({'sequence': sequences, 'length': lengths})"
+    "ao_sequences = get_sequences_from_fasta(open('allergens.fasta'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ao_df = pd.DataFrame({'sequence': ao_sequences})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -87,10 +86,10 @@
     {
      "data": {
       "text/plain": [
-       "(1666, 2)"
+       "(1666, 1)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -150,13 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def get_protein_characteristics(df):\n",
+    "def add_protein_characteristics(df):\n",
     "    aa_list = ['A', 'C','E','D','G','F','I','H','K','M','L','N','Q','P','S','R','T','W','V','Y']\n",
     "    aa_dict = {}\n",
     "    for aa in aa_list:\n",
@@ -177,12 +176,12 @@
     "    return df\n",
     "\n",
     "uniprot_df = create_balanced_df(allergen_sequences, non_allergen_sequences)\n",
-    "uniprot_final_df = get_protein_characteristics(uniprot_df)    "
+    "uniprot_final_df = add_protein_characteristics(uniprot_df)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cross validation score: 0.810256410256\n",
+      "cross validation score: 0.808974358974\n",
       "\n"
      ]
     }
@@ -211,19 +210,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "ao_df = create_balanced_df(ao_sequences, non_allergen_sequences)\n",
-    "ao_final_df = get_protein_characteristics(ao_df)"
+    "ao_final_df = add_protein_characteristics(ao_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -232,7 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cross validation score: 0.829839420259\n",
+      "cross validation score: 0.824439409469\n",
       "\n"
      ]
     }
@@ -244,6 +243,139 @@
     "rf = RandomForestClassifier()\n",
     "\n",
     "print 'cross validation score: ' + str(np.mean(cross_val_score(rf, X, y, cv=5))) + '\\n'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Dont forget to add n_grams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import urllib,urllib2\n",
+    "\n",
+    "url = 'http://www.uniprot.org/uploadlists/'\n",
+    "\n",
+    "params = {\n",
+    "'from':'ACC',\n",
+    "'to':'ACC',\n",
+    "'format':'fasta',\n",
+    "'query':'P31946 P62258',\n",
+    "'columns': 'organism, id, Sequence'\n",
+    "}\n",
+    "\n",
+    "data = urllib.urlencode(params)\n",
+    "request = urllib2.Request(url, data)\n",
+    "contact = \"jaredtjacobsen@gmail.com\"\n",
+    "request.add_header('User-Agent', 'Python %s' % contact)\n",
+    "response = urllib2.urlopen(request)\n",
+    "page = response.read(200000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print page"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "url = 'http://www.uniprot.org/uploadlists/'\n",
+    "params = {\n",
+    "'from':'ACC',\n",
+    "'to':'ACC',\n",
+    "'format':'fasta',\n",
+    "'query':'P31946 P62258',\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url, params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "[''.join(i.split('\\n')[1:]) for i in response.text.split('>')[1:]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "s = [1,2,3]\n",
+    "'g'.join(map(str, s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from Bio import SeqIO\n",
+    "fasta_sequences = SeqIO.parse(response.text,'fasta')\n",
+    "return [str(fasta.seq) for fasta in fasta_sequences]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "'>g'.split('>')"
    ]
   },
   {
