got allergen ABT and started modelling

--- a/allergen_demo/allergen_ABT_construction.ipynb
+++ b/allergen_demo/allergen_ABT_construction.ipynb
@@ -15,87 +15,8 @@
     "\n",
     "from Bio import SeqIO\n",
     "from Bio.SeqUtils.ProtParam import ProteinAnalysis\n",
-    "import StringIO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_sequences_from_fasta(fin):\n",
-    "    fasta_sequences = SeqIO.parse(fin,'fasta')\n",
-    "    return [str(fasta.seq) for fasta in fasta_sequences]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def create_balanced_df(allergen_sequences, non_allergen_sequences):\n",
-    "    allergen_set = set(allergen_sequences)\n",
-    "    non_allergen_sequences = [seq for seq in non_allergen_sequences if seq not in allergen_set]\n",
-    "    non_allergen_sequences = np.random.choice(non_allergen_sequences, len(allergen_sequences)).tolist()\n",
-    "    balanced_df = pd.DataFrame({'sequence': allergen_sequences + non_allergen_sequences,\n",
-    "                                'allergen': [1]*len(allergen_sequences) + [0]*len(non_allergen_sequences)})\n",
-    "    return balanced_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def add_protein_characteristics(df):\n",
-    "    aa_list = ['A', 'C','E','D','G','F','I','H','K','M','L','N','Q','P','S','R','T','W','V','Y']\n",
-    "    aa_dict = {}\n",
-    "    for aa in aa_list:\n",
-    "        aa_dict[aa] = []\n",
-    "    prop_dict = {'aromaticity': [], 'instability_index': [], 'helix': [], 'turn': [], 'sheet': []}\n",
-    "    for i, s in enumerate(df['sequence']):\n",
-    "        pa = ProteinAnalysis(s)\n",
-    "        prop_dict['aromaticity'].append(pa.aromaticity())\n",
-    "        prop_dict['instability_index'].append(pa.aromaticity())\n",
-    "        for fraction, ss in zip(pa.secondary_structure_fraction(), ['helix', 'turn', 'sheet']):\n",
-    "            prop_dict[ss].append(fraction)\n",
-    "        for k, v in pa.get_amino_acids_percent().items():\n",
-    "            aa_dict[k].append(v)\n",
-    "    for k, v in aa_dict.items():\n",
-    "        df[k] = v\n",
-    "    for k, v in prop_dict.items():\n",
-    "        df[k] = v\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def parse_description(d):\n",
-    "    p = '(\\w{2})\\s*\\|\\s*([\\w\\d]+)\\s*\\|\\s*(.*?)\\s(.*?)\\sOS=([\\w]* [\\w]*)'\n",
-    "    group_object = re.match(p, d)\n",
-    "    return group_object.group(1, 2, 3, 4, 5)"
+    "import StringIO\n",
+    "from utils import *"
    ]
   },
   {
@@ -108,33 +29,6 @@
    "source": [
     "non_allergen_sequences = get_sequences_from_fasta(open('../data/uniprot_sprot.fasta'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -248,15 +142,6 @@
     "\n",
     "print 'cross validation score: ' + str(np.mean(cross_val_score(rf, X, y, cv=5))) + '\\n'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3585,9 +3470,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3599,7 +3484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
